# demo-web-app

./: .gitattributes  .gitignore  DOCS_SETUP.md  DOCUMENTATION.md  Dockerfile  README.md  SECURITY_TESTING.md  TESTING.md  TYPE_CHECKING.md  VERIFY_DOCS.md  app.py  compose.yml  docker-entrypoint.sh  mkdocs.yml  pyproject.toml  requirements.txt  test_app.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build-and-publish.yml  security.yml
docs/: api.md  configuration.md  deployment.md  faq.md  getting-started.md  index.md  installation.md
docs/architecture/: authentication.md  data-model.md  structure.md
docs/development/: building.md  contributing.md  testing.md
docs/usage/: creating-entries.md  manager-workflow.md  managing-entries.md
entries/: tests.py  urls.py
src/employee_dialogue/: __init__.py
src/employee_dialogue/templates/: base.html  create.html  edit.html  final_edit.html  index.html
templates/: base.html  create.html  edit.html  final_edit.html  index.html
tests/: test_app.py
