[project]
name = "demo-web-app"
version = "0.1.0"
description = "Flask form demo with SQLite backend"
authors = [{ name = "Your Name" }]
requires-python = ">=3.9"
dependencies = [
    "Flask==3.0.2",
    "Flask-SQLAlchemy==3.1.1",
    "msal==1.29.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.9", "pytest>=8.0.0", "pytest-flask>=1.3.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["venv", "__pycache__", ".git", ".pytest_cache", "*.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "C90", "B"]
ignore = ["E501"]  # Line length is handled by line-length config

[tool.ruff.lint.isort]
lines-between-types = 1
force-single-line = true

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
