[project]
name = "employee-dialogue"
version = "0.1.0"
description = "Employee Dialogue - Performance review and assessment application"
authors = [{ name = "Your Name" }]
requires-python = ">=3.9"
dependencies = [
    "Flask==3.1.3",
    "Flask-SQLAlchemy==3.1.1",
    "gunicorn==23.0.0",
    "msal==1.34.0",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "tzdata>=2025.3",
]
readme = "README.md"
license = "MIT"
keywords = ["employee", "dialogue", "performance", "review", "assessment"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Flask",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.9", "pytest>=8.0.0", "pytest-flask>=1.3.0", "pyright>=1.1.0"]
docs = ["mkdocs>=1.5.0", "mkdocs-material>=9.0.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
employee_dialogue = ["templates/*.html", "static/*", "static/**/*"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["venv", ".venv", "__pycache__", ".git", ".pytest_cache", "*.egg-info", "**/node_modules", "**/.*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "C90", "B"]
ignore = ["E501"]  # Line length is handled by line-length config

[tool.ruff.lint.isort]
lines-between-types = 1
force-single-line = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
filterwarnings = [
    "ignore::sqlalchemy.exc.LegacyAPIWarning",
    "ignore::DeprecationWarning:msal.*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/venv",
    "**/.venv",
    "**/*.egg-info",
    "**/node_modules",
    "**/.*",
    "tests",
]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedVariable = true
reportUnusedImport = true
reportCallIssue = "none"  # Suppress SQLAlchemy model init constructor parameter warnings

